packages/parser/test/parser/E0137.txt
a: int |
===== err =====
anonymous:1:9: ParseError: E0137 - Expected union subtype after pipe operator
1 | a: int |
  |         ^
